# django-react-app

./: LICENSE  README.md  compose.dev.yml  compose.prod.yml  makefile
.devcontainer/: devcontainer.json  dockerfile.vscode
api/: .bash_history  .dockerignore  .gitignore  pyproject.toml
api/config/: celery.py  settings.py  urls.py  views.py
api/docker/dockerfiles/: dockerfile.dev  dockerfile.prod
api/docker/entrypoints/: entrypoint.api.dev.sh  entrypoint.api.prod.sh  entrypoint.celery.dev.sh  entrypoint.celery.prod.sh
api/fixtures/: auth.json  users.json
api/src/identity/: apps.py  serializers.py  urls.py  views.py
api/src/shared/: exceptions.py
api/src/users/: admin.py  apps.py  exceptions.py  urls.py
api/src/users/migrations/: 0001_initial.py
api/src/users/models/: __init__.py  managers.py  profile_model.py  user_data.py  user_model.py
api/src/users/serializers/: user_serializer.py
api/src/users/utils/: signals.py  storage_path.py
api/src/users/views/: user_view.py
api/tests/: conftest.py
contrib/: api_env_sample  ui_env_sample
scripts/: setup_envs.sh
ui/: .dockerignore  .env  .gitignore  package-lock.json
ui/docker/dockerfiles/: dockerfile.dev  dockerfile.prod
